--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 anyio==3.6.1
 asgiref==3.5.2
+audioread==2.1.9
 black==22.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
@@ -21,8 +22,9 @@ pathspec==0.9.0
 platformdirs==2.5.2
 pycodestyle==2.8.0
 pydantic==1.9.1
+pydantic-mongo==0.1.2
 pyflakes==2.4.0
-pymongo==4.2.0
+pymongo==3.12.3
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
