third actions test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         pip install -r requirements-dev.txt
     - name: Test with flake8
       run: |
-        cd foreign-narrations/
+        cd foreign_narrations/
         python -m flake8
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
