--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/foreign-narrations:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/narrations-app:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
