--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd /home/global/planetarium-tech/narrations
-            sudo docker-compose stop
-            sudo docker-compose rm app
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foreign-narrations:latest
-            sudo docker-compose up -d
+            docker-compose stop
+            docker-compose rm app
+            docker pull ${{ secrets.DOCKER_USERNAME }}/foreign-narrations:latest
+            docker-compose up -d
