--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
+            context: ./foreign_narrations/
             file: ./foreign_narrations/Dockerfile
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/narrations-app:latest
