--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: ${{ github.ref_name == 'main' }}
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -59,6 +60,7 @@ jobs:
             docker-compose stop
             docker-compose rm app
             docker pull ${{ secrets.DOCKER_USERNAME }}/narrations-app:latest
+            rm development.env
             touch development.env
             echo API_HOST=${{ secrets.API_HOST }} >> development.env
             echo API_PORT=${{ secrets.API_PORT }} >> development.env
