--- a/foreign_narrations/requirements-dev.txt
+++ b/foreign_narrations/requirements-dev.txt
@@ -9,10 +9,15 @@ dnspython==2.2.1
 email-validator==1.2.1
 fastapi==0.79.0
 flake8==4.0.1
+flake8-broken-line==0.5.0
+flake8-isort==4.2.0
+flake8-plugin-utils==1.3.2
+flake8-return==1.1.3
 gunicorn==20.1.0
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -20,6 +25,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 orjson==3.7.8
 pathspec==0.9.0
+pep8-naming==0.13.1
 platformdirs==2.5.2
 pycodestyle==2.8.0
 pydantic==1.9.1
