--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,11 +1,20 @@
 server_tokens off;
 
 server {
-    listen 80;
+    listen 8080;
 
-    server_name 0.0.0.0;
+    server_name 127.0.0.1;
+
+    root /frontend/;
 
     location / {
+     try_files $uri /index.html;
+    }
+
+    location /api/ {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
       proxy_pass http://app:5010;
     }
 }
